--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,15 +1,16 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  title: MyString
-  description: MyText
-  movie_length: MyString
-  director: MyString
-  rating: MyString
-
-two:
-  title: MyString
-  description: MyText
-  movie_length: MyString
-  director: MyString
-  rating: MyString
+#
+#one:
+#  title: MyString
+#  description: MyText
+#  movie_length: MyString
+#  director: MyString
+#  rating: MyString
+#
+#two:
+#  title: MyString
+#  description: MyText
+#  movie_length: MyString
+#  director: MyString
+#  rating: MyString
+#
