--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  rating: 1
-  comment: MyText
-
+  rating: 5
+  comment: Good movie!
+#
 two:
   rating: 1
   comment: MyText
